[project]
name = "scholarscout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "firecrawl-py>=4.13.0",
    "langchain>=1.2.6",
    "langchain-openai>=1.1.7",
    "mcp>=1.25.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "scholarly>=1.7.11",
    "serpapi>=0.1.5",
]
