[project]
name = "scholarscout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "firecrawl-py>=4.13.0",
    "httpx>=0.28.1",
    "langchain>=1.2.6",
    "langchain-openai>=1.1.7",
    "mcp>=1.25.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.26.7",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.14.3",
    "scholarly>=1.7.11",
    "serpapi>=0.1.5",
    "tavily-python>=0.7.19",
    "tenacity>=9.1.2",
]
